2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm (load): fix bug where a private key file
   named '0' could not be loaded

2010-03-01: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature.pm (new): accept Key parameter when
   constructing a DomainKey signature object

2010-02-27: Jason Long <jlong@messiah.edu>
 * t/external_signer.t: test use of an alternate object for Key
   during a "sign" operation

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: document use of an alternate object for
   PrivateKey objects

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: import PrivateKey.pm in this module,
   rather than in the Algorithm modules

2010-02-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PrivateKey.pm: document the sign_digest() method
 * lib/Mail/DKIM/Algorithm/*: use sign_digest() rather than
   sign_sha1_digest()

2010-01-23: Jason Long <jlong@messiah.edu>
 * t/public_key.t: test that DNS failure reason is given, when
   DNS returns no results
 * lib/Mail/DKIM/DNS.pm: bugfix (introduced by async_dns branch):
   preserve $@ in case of no error

2010-01-23: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/{DNS,Signature,PublicKey,Policy}.pm: merged my
   "async dns" branch

--BEGIN "ASYNC DNS" branch
2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Policy.pm: new fetch_async method, seems to work

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signature.pm: new fetch_public_key method,
   which starts an asynchronous query for the public key
   referenced by this signature; redesign get_public_key to
   know how to complete the query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm: new fetch_async method: starts a
   query and returns a subref that when called will complete the
   query

2009-07-10: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: new query_async method: starts a query and